--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-numpy==1.21.4
-pickle-mixin==1.0.2
-streamlit==1.2.0
-streamlit-option-menu==0.3.2
-scikit-learn==1.0.1
+streamlit>=1.14
+streamlit-option-menu
+numpy>=1.24
+pandas
+scikit-learn
+pickle-mixin
